Finalización del proyecto

--- a/src/components/FigureItem/FigureItem.scss
+++ b/src/components/FigureItem/FigureItem.scss
@@ -15,9 +15,8 @@
             margin: 0;
         }
 
-        a {
-            text-decoration: none;
-            width: 24px;
+        .edit-icon {
+            color: grey;
         }
     }
 
